--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.10",
