--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,15 +4,18 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.10",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "stripe": "^15.10.0"
   },
   "scripts": {
